--- a/join/templates/head.html
+++ b/join/templates/head.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   {% endblock %}
-  {% block title %}<title>BeLuz</title>{% endblock %}
+  {% block title %}<title>Join</title>{% endblock %}
   {% block keywords %}<meta name="keywords" content="" />{% endblock %}
   {% block description %}<meta name="description" content="">{% endblock %}
   {% block author %}<meta name="author" content="">{% endblock %}
@@ -44,9 +44,9 @@
     <link href="{% static "js/owl-carousel/owl.carousel.css" %}" rel="stylesheet">
     <link href="{% static "js/owl-carousel/owl.theme.css" %}" rel="stylesheet">
     <link href="{% static "js/tabs/css/responsive-tabs.css" %}" rel="stylesheet" type="text/css" media="all" />
-    <link href="{% static "css/beluz.css" %}" rel="stylesheet" type="text/css" media="all" />
+    <link href="{% static "css/join.css" %}" rel="stylesheet" type="text/css" media="all" />
     <link href="{% static "js/ytplayer/ytplayer.css" %}" rel="stylesheet" type="text/css" media="all" />
-
+    <link rel="stylesheet" href="{% static "css/shortcodes.css" %}" type="text/css">
   {% endblock %}
   <!-- Template's stylesheets END -->
 
