--- a/static/js/megamenu/stylesheets/screen.css
+++ b/static/js/megamenu/stylesheets/screen.css
@@ -13,7 +13,7 @@
 /* line 14, ../sass/screen.scss */
 .header-section {
   font-family: 'Open Sans', sans-serif;
-  background-color: #020203;
+  background-color: #000000 !important;
   padding-top: 5px;
 }
 
@@ -486,7 +486,7 @@
 
 .header-section.style1 {
 	position:relative;
-	background-color:transparent;
+	background-color:#000000;
 	border-bottom:1px solid rgba(255, 255, 255, 0.2);
 }
 .header-section.style1.noborder {
