Home slides and user

--- a/join/static/js/megamenu/stylesheets/screen.css
+++ b/join/static/js/megamenu/stylesheets/screen.css
@@ -19,7 +19,7 @@
 
 /* line 22, ../sass/screen.scss */
 .header-section img {
-  max-width: 65%;
+  max-width: 100px;
 }
 /* line 25, ../sass/screen.scss */
 .header-section .container {
