--- a/join/templates/partials/people.html
+++ b/join/templates/partials/people.html
@@ -1,7 +1,7 @@
 {% load i18n static %}
 <section class="sec-padding section-light" style="padding-top: 17px">
   <div class="container-fluid">
-    <div class="parallax vertical-align" data-parallax-bg-image="http://via.placeholder.com/2000x1300" data-parallax-direction="down" data-parallax-speed="0.9">
+    <div class="parallax vertical-align" data-parallax-bg-image="{% static "images/users-background.png" %}" data-parallax-direction="down" data-parallax-speed="0.9">
       <div class="parallax-overlay bg-opacity-8">
         <div class="container sec-tpadding-3 sec-bpadding-3">
           <div class="row">
@@ -30,7 +30,7 @@
                     <p class="padding-top-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo.</p>
                   </div>
                   <div class="overlay"></div>
-                  <img alt="" class="img-responsive" src="http://via.placeholder.com/750x850"> </img></div>
+                  <img alt="" class="img-responsive" src="{% static "images/people/people-3.png" %}"> </img></div>
               </div>
             </div>
             <!--end item-->
@@ -51,7 +51,7 @@
                     <p class="padding-top-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo.</p>
                   </div>
                   <div class="overlay"></div>
-                  <img alt="" class="img-responsive" src="http://via.placeholder.com/750x850"> </img></div>
+                  <img alt="" class="img-responsive" src="{% static "images/people/people-2.png" %}"> </img></div>
               </div>
             </div>
             <!--end item-->
@@ -72,7 +72,7 @@
                     <p class="padding-top-1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo.</p>
                   </div>
                   <div class="overlay"></div>
-                  <img alt="" class="img-responsive" src="http://via.placeholder.com/750x850"/> </div>
+                  <img alt="" class="img-responsive" src="{% static "images/people/people-1.png" %}"/> </div>
               </div>
             </div>
             <!--end item-->
