--- a/join/templates/partials/projects.html
+++ b/join/templates/partials/projects.html
@@ -3,9 +3,8 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="sec-title-container text-center">
-          <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary montserrat">Our creative team gives you best Support</h5>
-          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">Our Creative Team gives You best <br/>
-            Service and excellent Support</h2>
+          <h5 class="font-weight-4 less-mar-1 line-height-4 text-primary montserrat">Proyectos fenomenales que inspiran</h5>
+          <h2 class="font-weight-6 less-mar-1 montserrat line-height-5">Proyectos fenomenales que inspiran<br/></h2>
         </div>
       </div>
       <div class="clearfix"></div>
