Compress slider images

--- a/join/home/templates/partials/top_navbar.html
+++ b/join/home/templates/partials/top_navbar.html
@@ -76,7 +76,7 @@
                           <li> <a href="portfolio-left-sidebar.html"><i class="fa fa-angle-right"></i> &nbsp; My Project</a> </li>
                           <li> <a href="portfolio-right-sidebar.html"><i class="fa fa-angle-right"></i> &nbsp; My Project</a> </li>
                           <li> <a href="portfolio-carousel.html"><i class="fa fa-angle-right"></i> &nbsp; My Project</a> </li>
-                          <li> <a class="btn btn-default" href="{% url "add_project" %}"><i class="fa fa-angle-right"></i> &nbsp; {% trans "Nuevo Proyecto" %}</a> </li>
+                          <li> <a class="btn btn-medium border dark xround-7 uppercase" href="{% url "add_project" %}">{% trans "Nuevo Proyecto" %}</a> </li>
                         </ul>
                       </li>
                     </ul>
