--- a/join/home/templates/partials/slider.html
+++ b/join/home/templates/partials/slider.html
@@ -5,7 +5,7 @@
         <ul>	<!-- SLIDE  -->
           <li data-index="rs-309" data-transition="slideoverhorizontal" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-thumb="../../assets/images/bigbold_3-100x50.jpg"  data-rotate="0"  data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off"  data-title="Big &amp; Bold" data-description="">
             <!-- MAIN IMAGE -->
-            <img src="{% static "images/sliders/slide-prueba.jpg" %}" alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+            <img src="{% static "images/sliders/slide-prueba-min.jpg" %}" alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
 
             <!-- LAYER NR. 1 -->
@@ -133,7 +133,7 @@
           <!-- SLIDE  -->
           <li data-index="rs-310" data-transition="slideoverhorizontal" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-thumb="../../assets/images/typing_cover-100x50.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="HTML5 Video" data-description="">
             <!-- MAIN IMAGE -->
-            <img src="{% static "images/sliders/slide-2.png" %}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+            <img src="{% static "images/sliders/slide-2-min.png" %}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
 
             <!-- BACKGROUND VIDEO LAYER -->
@@ -276,7 +276,7 @@
           <!-- SLIDE  -->
           <li data-index="rs-311" data-transition="slideoverhorizontal" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-thumb="../../assets/images/bigbold_1-100x50.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="Scroll Down" data-description="">
             <!-- MAIN IMAGE -->
-            <img src="{% static "images/sliders/slide-3.png" %}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+            <img src="{% static "images/sliders/slide-3-min.png" %}"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
             <!-- LAYERS -->
 
             <!-- LAYER NR. 1 -->
